--- a/birdie.css
+++ b/birdie.css
@@ -3,21 +3,33 @@ body {
     font-weight: 400;
     font-style: normal;
     color: #22223b;
+    overflow: auto;
+    scrollbar-color: #9a8c98 #4a4e69;
+}
+
+.container {
+    display: flex;
 }
 
 main {
-    max-width: 450px;
-    padding: 30px;
     border: #4a4e69 3px solid;
     border-radius: 2%;
     background-color: #c9ada7;
     float: left;
-
+    width: 30%;
+    height: 520px;
+    padding: 2%;
+    overflow: scroll;
+    scrollbar-color: #c9ada7 #4a4e69;
+    scrollbar-width: 1px;
+    text-align: center;
 }
 
 h1 {
     font-size: 40px;
     text-decoration: underline;
+    text-align: center;
+    margin: auto;
 }
 
 .indie-flower-regular {
@@ -36,24 +48,23 @@ hr {
 }
 
 .letter {
-    max-width: 450px;
-    padding: 30px;
     border: #4a4e69 3px solid;
     border-radius: 2%;
     background-color: #c9ada7;
-    height: 450px;
-    overflow: auto;
+    overflow: scroll;
     scrollbar-color: #c9ada7 #4a4e69;
-    float: right;
-    margin: 0px;
     text-align: left;
+    float: right;
+    width: 30%;
+    height: 520px;
+    padding: 2%;
 }
 
 button {
     font-family: "Indie Flower", cursive;
     font-size: medium;
     font-weight: bold;
-    background-color: #c9ada7;
+    background-color: transparent;
     border-color: #4a4e69;
     border-radius: 8%;
     cursor: pointer;
@@ -61,38 +72,39 @@ button {
 }
 
 .music {
-    width: 301px;
-    padding: 30px;
     border: #4a4e69 3px solid;
     border-radius: 2%;
     background-color: #f2e9e4;
-    height: 450px;
-    overflow: auto;
+    overflow: scroll;
     scrollbar-color: #f2e9e4 #4a4e69;
     float: left;
-    margin: 5px;
+    width: 30%;
+    height: 520px;
+    padding: 2%;
+    margin-left: 1%;
+    margin-right: 1%;
+    text-align: center;
 }
 
 footer {
-    height: 30px;
+    height: 50px;
     width: 600px;
     overflow: hidden;
     background-color: #4a4e69;
     border: #22223b 3px solid;
-    position: absolute;
     bottom: 45px;
     border-radius: 8px;
-    margin-left: 29%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: 1%;
 }
 
 footer p {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0;
     line-height: normal;
     text-align: center;
     animation: scroll 7s linear infinite;
+    align-self: center;
 }
 
 a {
