--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,19 @@ button {
     border-style: solid;
     color: #798113;
 }
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 4px;
+}
+
+.column {
+    flex: 25%;
+    padding: 4px;
+}
+
+.secret_text {
+    color: #020804;
+    font-size: small;
+}
